--- a/android-client/app/src/main/res/layout/cart_lv_item.xml
+++ b/android-client/app/src/main/res/layout/cart_lv_item.xml
@@ -47,7 +47,7 @@
             app:layout_constraintStart_toStartOf="@+id/plusBtn"
             app:layout_constraintHorizontal_bias="0.0" android:text="—" android:textStyle="bold"
             android:background="@drawable/button2_background"
-            android:textColor="#274046"/>
+            android:textColor="#5D3D37"/>
     <Button
             android:fontFamily="@font/enanum"
             android:text="+"
@@ -60,5 +60,5 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp"
             android:textStyle="bold" android:textSize="14sp"
             android:gravity="center" android:background="@drawable/button_background"
-            android:textColor="#274046"/>
+            android:textColor="@color/white"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
